--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://huichoman.github.io/mom-plot-search",
-  "name": "mom-plot-search",
+  "homepage": "https://prokod17.github.io/mps",
+  "name": "mps",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
